--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
   </div>
 
   <script>
+    const kodeBenar = "KELASKITA2025";
+    let input = prompt("Masukkan kode akses:");
+    if (input !== kodeBenar) {
+      document.body.innerHTML = "<h2>Akses ditolak!</h2><p>Kode akses salah.</p>";
+    }
+  </script>
+
+  <script>
     let currentSlide = 0;
     const slides = document.querySelectorAll('.slide');
     const prevBtn = document.getElementById('prevBtn');
